tests/paczka1/small_fuzzy/43459120.err
Error in line 2: SfB5LWLOLUW A417 2,7
Error in line 7: so`ipcKz3jC A92 49,1
Error in line 1: soPipcKz3jC S249 79,5
